--- a/index.html
+++ b/index.html
@@ -1,16 +1,47 @@
+<!doctype html>
+
 <html>
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <title>This Is My Little Calculator</title>
     </head>
-    <body>
+
+
+    <body><div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
+        Amount <input type="number" onchange="compute()" min="0"  id="principal">  <br/>
+        Rate <input type="range" onchange="updateRate()" 
+	onmousemove="updateRate()" min="1" max="20" 
+	step="0.25" value="10.25" id="rate">
+	<span id="rV"></span><br/>
+
+
+        No. of Years <select id="years">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>  <br/>
+
+
         Interest : <span id="result"></span><br>
 
-        <button onclick="compute()">Compute</button>
+
+        <button onclick="compute()">Compute Interest</button>
+	<div>
+
+
+    <footer>
+        &#169 This Calculator belongs to Chlyde : ) 
+    </footer>
     </body>
 </html>
+
